--- a/style.css
+++ b/style.css
@@ -42,8 +42,13 @@ header {
   padding: 1rem 2rem;
   background: var(--bg-card);
   border-bottom: 0.1rem solid rgba(99, 102, 241, 0.2);
-  justify-content: center;
   width: 100%;
+}
+
+@media (max-width: 400px) {
+  header {
+    gap: 30%;
+  }
 }
 
 .hamburger {
@@ -107,7 +112,7 @@ header {
 }
 
 /* Responsive */
-@media (max-width: 768px) {
+@media (max-width: 781px) {
   header nav.nav-links {
     display: none;
   }
@@ -130,6 +135,8 @@ nav {
 .logo {
   width: 20rem;
   height: 20rem;
+
+  transform: translateX(-2.55rem);
 }
 
 nav ul {
@@ -149,6 +156,21 @@ nav a {
   border-radius: 0.8rem;
   transition: all 0.3s ease;
   position: relative;
+}
+
+@media (max-width: 1070px) {
+  nav {
+    padding: 1rem 2rem;
+  }
+
+  nav ul {
+    gap: 1rem;
+  }
+
+  nav ul a {
+    font-size: 1.4rem;
+    padding: 0.2rem 0.4rem;
+  }
 }
 
 nav a:hover,
@@ -180,6 +202,13 @@ nav a.active {
   display: flex;
   flex-direction: column;
   align-items: self-start;
+}
+
+@media (max-width: 516px) {
+  .features {
+    flex-direction: column;
+    gap: 3rem;
+  }
 }
 
 .list-header {
@@ -273,7 +302,7 @@ h1 {
 .card-bio {
   align-items: center;
   font-size: 1.6rem;
-  min-width: 50rem;
+  padding: 1rem 2rem;
   text-align: center;
 }
 
@@ -313,6 +342,23 @@ h1 {
   justify-content: center;
   flex-wrap: wrap;
   margin-top: 3.2rem;
+}
+
+@media (max-width: 480px) {
+  .avatar {
+    width: 12rem;
+    height: 12rem;
+    font-size: 3rem;
+  }
+
+  .links {
+    margin-top: 1.6rem;
+  }
+
+  .btn {
+    width: 100%;
+    padding: 1rem 2rem !important;
+  }
 }
 
 .btn {
@@ -547,21 +593,5 @@ textarea.error {
 
   .about-section {
     padding: 1.5rem;
-  }
-}
-
-@media (max-width: 480px) {
-  .avatar {
-    width: 120px;
-    height: 120px;
-    font-size: 3rem;
-  }
-
-  .links {
-    flex-direction: column;
-  }
-
-  .btn {
-    width: 100%;
   }
 }
